fix gap issue when keyboard shows up on collect email view

--- a/src/sass/views/onboarding/onboard-collect-email.scss
+++ b/src/sass/views/onboarding/onboard-collect-email.scss
@@ -15,6 +15,7 @@
   }
   .scroll {
     height: 100%;
+    transform: translate3d(0px, 0px, 0px) scale(1) !important;
   }
   #success-image {
     margin-top: 4rem;
